--- a/index.html
+++ b/index.html
@@ -5,7 +5,17 @@
         </head>
         <body>
                 <nav class="navbar">
-                        Page navigation
+
+                                 <div class="navbar-header">
+                 <a class="navbar-brand" href="#">IISlabPIO</a>
+         </div>
+         <div class="collapse navbar-collapse">
+                 <ul class="nav navbar-nav">
+                           <li><a href="#section1">Systemy kontroli wersji</a></li>
+                           <li><a href="#section2">Rozproszony system kontroli wersji</a></li>
+                   </ul>
+           </div>
+
                 </nav>
                 <section id="section1" class="panel panel-default">
                         <div class="panel-heading">
@@ -15,7 +25,7 @@
                          Section1 content
                          </div>
                         <footer class="panel-footer">
-                                Section1 footer
+                                Opracowane na zajêciach "Podstawy systemu Git" w ramach laboratorium z Podstaw In¿ynierii Oprogramowania w <a href="http://www.iis.p.lodz.pl/">Instytucie Informatyki Stosowanej P£</a>
                         </footer>
                 </section>
                 <section id="section2" class="panel panel-default">
@@ -31,6 +41,18 @@
                 </section>
                 <footer class="navbar">
                         Page footer
+                </footer>
+
+
+<section id="section3" class="panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title">Scentralizowany system kontroli wersji.</h3>
+                  </div>
+                  <div class="panel-body">
+                 W scentralizowanych systemach kontroli wersji istnieje jedno centralne repozytorium, przechowuj¹ce wszystkie jednostki poddane kontroli wersji oraz wielu klientów, którzy ³¹cz¹c siê z nim za poœrednictwem us³ugi, uzyskuj¹ dostêp do poszczególnych wersji siê dokumentów.
+                 </div>
+                <footer class="panel-footer">
+                       <a href="http://git-scm.com/book/pl/Pierwsze-kroki-Wprowadzenie-do-kontroli-wersji#Scentralizowane-systemy-kontroli-wersji">Git - podrêcznik</a>
                 </footer>
         </body>
 </html>
